Let Recent Tabs app bar respect the safe area

The Recent Tabs app bar needs to take into account the safe area in
landscape. The control and the title need to be displayed inside.

Before: https://drive.google.com/open?id=0B21N-0pPGAuJal9xbkJ6Y0s1amc
After: https://drive.google.com/open?id=0B21N-0pPGAuJY1JmWU1zZ0FKQkU

Bug: 769207
Change-Id: Iff14f51b417905ee490b3d62250a0433b10367c5
Reviewed-on: https://chromium-review.googlesource.com/685661
Reviewed-by: Jean-François Geyelin <jif@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504602}
Former-commit-id: e0f35629dbc4d02666df30a22cee5d218e2f7a84