ios/chrome/browser/ui/ntp/recent_tabs/views/panel_bar_view.mm
@@ -21,6 +21,7 @@ namespace {
 
 const int kBackgroundColor = 0xf2f2f2;
 const CGFloat kFontSize = 20;
+const CGFloat kSpacing = 16;
 
 }  // namespace
 
@@ -78,10 +79,19 @@ const CGFloat kFontSize = 20;
     };
     NSArray* constraints = @[
       @"V:|-0-[statusBar]-14-[closeButton]-13-|",
-      @"H:|-16-[title]-(>=0)-[closeButton]-16-|",
+      @"H:[title]-(>=0)-[closeButton]",
     ];
     ApplyVisualConstraintsWithOptions(constraints, viewsDictionary,
                                       LayoutOptionForRTLSupport(), self);
+    UILayoutGuide* safeAreaLayoutGuide = SafeAreaLayoutGuideForView(self);
+    [NSLayoutConstraint activateConstraints:@[
+      [title.leadingAnchor
+          constraintEqualToAnchor:safeAreaLayoutGuide.leadingAnchor
+                         constant:kSpacing],
+      [_closeButton.trailingAnchor
+          constraintEqualToAnchor:safeAreaLayoutGuide.trailingAnchor
+                         constant:-kSpacing],
+    ]];
     AddSameCenterYConstraint(self, title, _closeButton);
     _statusBarSpacerConstraint =
         [NSLayoutConstraint constraintWithItem:statusBarSpacer
